# timeline-creator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/timeline_creator/: __init__.py
src/timeline_creator/prompts/: timeline.jinja
src/timeline_creator/view/: index.html
tests/: test_timeline.py
